Fixed the dark/light mode alignment

--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -27,79 +27,6 @@ header {
     align-items: center;
 }
 
-.sidebar ul li#theme-switch {
-    width: 90%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    border-radius: 0.8rem;
-    cursor: pointer;
-}
- 
-.sidebar ul li#theme-switch button {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    background: none;
-    border: none;
-    color: white;
-    font-size: 1rem;
-    padding: 0.5rem;
-    gap: 10px;
-    cursor: pointer;
-}
- 
-.sidebar ul li#theme-switch i {
-    font-size: 1.5rem;
-}
- 
-/* Hover effect */
-.sidebar ul li#theme-switch:hover {
-    background-color: white;
-    color: red;
-}
- 
-/* Tooltip alignment */
-.sidebar ul li#theme-switch .tooltip {
-    left: 125px;
-    top: 40%;
-    transform: translateY(-50%);
-    position: absolute;
-    white-space: nowrap;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 0.4rem 1rem;
-    border-radius: 0.6rem;
-    box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
-    z-index: 20;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
- 
-.sidebar ul li#theme-switch:hover .tooltip {
-    opacity: 1;
-    display: block;
-}
-
-#theme-switch i:last-child {
-    display: none;
-}
-
-.darkmode #theme-switch i:first-child {
-    display: none;
-}
-
-.darkmode #theme-switch i:last-child {
-    display: block;
-}
-
-.darkmode .main-content {
-    background-color: gray;
-    color: #eee;
-}
-
 .searchbar {
     display: flex;
     align-items: center;
@@ -288,6 +215,73 @@ header {
 
 .sidebar.active ul li .tooltip {
     display: none;
+}
+
+.sidebar ul li#theme-switch {
+    position: relative;
+    list-style-type: none;
+    height: 50px;
+    width: 90%;
+    margin: 0.8rem auto;
+    line-height: 50px;
+}
+ 
+.sidebar ul li#theme-switch button {
+    display: flex;
+    align-items: center;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 0.8rem;
+    cursor: pointer;
+    gap: 10px;
+}
+ 
+.sidebar ul li#theme-switch button i {
+    font-size: 1.5rem;
+    width: auto;
+    text-align: center;
+}
+
+.sidebar #theme-switch .nav-item {
+    opacity: 0;
+}
+
+.sidebar.active #theme-switch .nav-item {
+    opacity: 1;
+}
+ 
+.sidebar ul li#theme-switch button:hover {
+    background-color: white;
+    color: red;
+}
+
+.sidebar.active ul li#theme-switch .tooltip {
+    display: none;
+}
+ 
+.sidebar ul li#theme-switch:hover .tooltip {
+    opacity: 1;
+}
+
+#theme-switch i:last-child {
+    display: none;
+}
+
+.darkmode #theme-switch i:first-child {
+    display: none;
+}
+
+.darkmode #theme-switch i:last-child {
+    display: block;
+}
+
+.darkmode .main-content {
+    background-color: gray;
+    color: #eee;
 }
 
 .main-content {
